--- a/Tarea4_Proyecto_1_CV/0Personal_Data.html
+++ b/Tarea4_Proyecto_1_CV/0Personal_Data.html
@@ -9,45 +9,50 @@
 </head>
 <body>
     <div id="menu-placeholder"></div>
-    <div class="container">
-        <div class="titulo">
-            <h1 class="text">PERSONAL INFORMATION</h1>
+        <div class="contenedorImagen">
+            <img src="./img/RodrigoFacio.jpg" class="contornoImagen">
+            <div class="contenedorImagenPalabras">
+                <div>
+                    <div class="titulo">
+                        <h1 class="text">PERSONAL INFORMATION</h1>
+                    </div>
+                </div>
+                <div>
+                    <table>
+                        <tbody>
+                            <tr class="elemento">
+                                <th>ID number</td>
+                                <td>1-1498-0956</td>
+                            </tr>
+                            <tr class="elemento2">
+                                <th>Nationality</td>
+                                <td>Costarrican</td>
+                            </tr>
+                            <tr class="elemento">
+                                <th>Civil status</td>
+                                <td>Single</td>
+                            </tr>
+                            <tr class="elemento2">
+                                <th>Residence</td>
+                                <td>Barrio Escalante, San José, Costa Rica</td>
+                            </tr>
+                            <tr class="elemento">
+                                <th>Phone number</td>
+                                <td>(+506) 8790-0040</td>
+                            </tr>
+                            <tr class="elemento2">
+                                <th>E-mail</td>
+                                <td>jorddy.castro@gmail.com</td>
+                            </tr>
+                            <tr class="elemento">
+                                <th>LinkedIn</td>
+                                <td><a href="https://www.linkedin.com/in/jorddy-castro-araya-a5b3a9244/">Visit my profile!</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
-    </div>
-    <div>
-        <table class="container">
-            <tbody>
-                <tr class="elemento">
-                    <th>ID number</td>
-                    <td>1-1498-0956</td>
-                </tr>
-                <tr class="elemento2">
-                    <th>Nationality</td>
-                    <td>Costarrican</td>
-                </tr>
-                <tr class="elemento">
-                    <th>Civil status</td>
-                    <td>Single</td>
-                </tr>
-                <tr class="elemento2">
-                    <th>Residence</td>
-                    <td>Barrio Escalante, San José, Costa Rica</td>
-                </tr>
-                <tr class="elemento">
-                    <th>Phone number</td>
-                    <td>(+506) 8790-0040</td>
-                </tr>
-                <tr class="elemento2">
-                    <th>E-mail</td>
-                    <td>jorddy.castro@gmail.com</td>
-                </tr>
-                <tr class="elemento">
-                    <th>LinkedIn</td>
-                    <td><a href="https://www.linkedin.com/in/jorddy-castro-araya-a5b3a9244/">Visit my profile!</a></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="/Tarea4_Proyecto_1_CV/js/0Personal_Data.js"></script>
