--- a/Tarea4_Proyecto_1_CV/1Work_Experience.html
+++ b/Tarea4_Proyecto_1_CV/1Work_Experience.html
@@ -87,12 +87,13 @@
                             <tr class="elemento2">
                                 <td>Beneficio La Sylvia Ltda.</td>
                                 <td>2019</td>
-                                <td>2022</td>
+                                <td>2024</td>
                                 <td>
                                     <div>Professional Services for the Environmental Management Department at Beneficio La Sylvia Ltda.</div>
                                     <div>• Technical Director: Engineering project for the remodeling of 90 m² in administrative offices.</div>
                                     <div>• Design of sanitation systems for the implementation of the Ecological Blue Flag Program in the Climate Change categories.</div>
                                     <div>• Emergency Preparedness and Response Plan: Assessment of the workplace, structural and non-structural conditions of the buildings, drafting of plans, and mapping of evacuation routes.</div>
+                                    <div>• Domestic Composting Project and the Use of Composting Equipment for the Municipality of Heredia.</div>
                                 </td>
                             </tr>
                             <tr class="elemento">
