--- a/Tarea4_Proyecto_1_CV/2Academic_Background.html
+++ b/Tarea4_Proyecto_1_CV/2Academic_Background.html
@@ -14,7 +14,7 @@
         <div class="contenedorImagenPalabras">
             <div>
                 <div class="titulo">
-                    <h1 class="text">Academic Background</h1>
+                    <h1 class="text">ACADEMIC BACKGROUND</h1>
                 </div>
             </div>
             <div>
