--- a/Tarea4_Proyecto_1_CV/4Certifications.html
+++ b/Tarea4_Proyecto_1_CV/4Certifications.html
@@ -22,46 +22,51 @@
             <div>
                 <table>
                     <thead>
-                        <tr class="elemento">
+                        <tr class="elemento2">
                             <th>Certification</th>
                             <th>Year</th>
                             <th>Certificate ID</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="elemento2">
+                        <tr class="elemento">
                             <td class="btn-tran">75-Hour Python 101 Software Engineering Course, Coding Nomads.</td>
                             <td class="btn-tran">2024</td>
                             <td class="btn-tran">b56e18d4190d4f6aa4c34ab3d95d5260</td>
                         </tr>
-                        <tr class="elemento">
+                        <tr class="elemento2">
                             <td class="btn-tran">Git & GitHub 40-Hour Software Engineering Course, Coding Nomads.</td>
                             <td class="btn-tran">2024</td>
                             <td class="btn-tran">6372a7e21c0445619f00f1a9c8601e99</td>
                         </tr>
-                        <tr class="elemento2">
+                        <tr class="elemento">
                             <td class="btn-tran">REVIT Module I, CCC.</td>
                             <td class="btn-tran">2021</td>
                             <td class="btn-tran">-</td>
                         </tr>
-                        <tr class="elemento">
+                        <tr class="elemento2">
                             <td class="btn-tran">Real Estate and Mortgage Appraisals, CCC.</td>
                             <td class="btn-tran">2021</td>
                             <td class="btn-tran">-</td>
                         </tr>
-                        <tr class="elemento2">
+                        <tr class="elemento">
                             <td class="btn-tran">Fundamentals for Carbon Neutrality in Organizations, INA.</td>
                             <td class="btn-tran">2020</td>
                             <td class="btn-tran">-</td>
                         </tr>
-                        <tr class="elemento">
+                        <tr class="elemento2">
                             <td class="btn-tran">Basic Occupational Health, INA.</td>
                             <td class="btn-tran">2020</td>
                             <td class="btn-tran">-</td>
                         </tr>
-                        <tr class="elemento2">
+                        <tr class="elemento">
                             <td class="btn-tran">Basic First Aid, INA.</td>
                             <td class="btn-tran">2020</td>
+                            <td class="btn-tran">-</td>
+                        </tr>
+                        <tr class="elemento2">
+                            <td class="btn-tran">Incorporation into the Federated College of Engineers and Architects.</td>
+                            <td class="btn-tran">2019</td>
                             <td class="btn-tran">-</td>
                         </tr>
                         <tr class="elemento">
@@ -90,13 +95,19 @@
                             <td class="btn-tran">-</td>
                         </tr>
                         <tr class="elemento2">
-                            <td class="btn-tran">Basic level in Portuguese, School of Modern Languages, Universidad de Costa Rica.</td>
+                            <td class="btn-tran">Basic level in Portuguese, School of Modern Languages, Universidad de Costa
+                                Rica.</td>
                             <td class="btn-tran">2015</td>
                             <td class="btn-tran">-</td>
                         </tr>
                         <tr class="elemento">
+                            <td class="btn-tran">AutoCAD Civil 3D, FUNDEVI, Universidad de Costa Rica.</td>
+                            <td class="btn-tran">2013</td>
+                            <td class="btn-tran">-</td>
+                        </tr>
+                        <tr class="elemento2">
                             <td class="btn-tran">English Program Regular Mode, Instituto Tecnológico de Costa Rica.</td>
-                            <td class="btn-tran">2015</td>
+                            <td class="btn-tran">2007</td>
                             <td class="btn-tran">-</td>
                         </tr>
                     </tbody>
