--- a/Tarea4_Proyecto_1_CV/5Additional_Data.html
+++ b/Tarea4_Proyecto_1_CV/5Additional_Data.html
@@ -14,8 +14,47 @@
 
 <body>
     <div id="menu-placeholder"></div>
-    <div class="container">
-        <h1>CV Jorddy</h1>
+    <div class="contenedorImagen">
+        <img src="./img/pythonimg.jpg" class="contornoImagen">
+        <div class="contenedorImagenPalabras">
+            <div>
+                <div class="titulo">
+                    <h1 class="text">ADDITIONAL DATA</h1>
+                </div>
+            </div>
+            <div>
+                <table>
+                    <tbody>
+                        <tr class="elemento">
+                            <th class="btn-tran">Skills and Abilities</td>
+                            <td class="btn-tran">
+                                <div>• Respectful individual with strong interpersonal skills, ease in working as part of a team. Great ability to achieve established goals under pressure.</div>
+                                <div>• Proficient in Civil Engineering programs like Microsoft Project, AutoCAD, ArcGIS, ETABS, SketchUp and MS Office programs.</div> 
+                                <div>• Proficient in Software Developer progrmans like Python, SQL Server Management Studio, Visual Studio, Visual Studio Code, JavaScript, HTML, CSS, Vue, React, Angular.</div>
+                                <div>• B1 driver's license and own vehicle.</div>
+                                <div>• Available for full-time work.</div>
+                            </td>
+                        </tr>
+                        <tr class="elemento2">
+                            <th class="btn-tran">References</th>
+                            <td class="btn-tran">
+                                <div>• Ms. Mariela Jiménez Oviedo, Environmental Department. La Sylvia Ltda. Phone: (+506) 83267044</div>
+                                <div>• Lic. José David Rodríguez Arce, Project Engineer. Samagú S.A. Construction Company. Phone: (+506) 83092845</div>
+                            </td>
+                        </tr>
+                        <tr class="elemento">
+                            <th class="btn-tran">Passport</td>
+                            <td class="btn-tran">
+                                <div>• ID Number: 114980956</div>
+                                <div>• Expiration Date: 25/02/2027</div>
+                
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
@@ -24,5 +63,4 @@
         })
     </script>
 </body>
-
 </html>
