--- a/Tarea4_Proyecto_1_CV/0Personal_Data.html
+++ b/Tarea4_Proyecto_1_CV/0Personal_Data.html
@@ -10,7 +10,7 @@
 <body>
     <div id="menu-placeholder"></div>
         <div class="contenedorImagen">
-            <img src="./img/RodrigoFacio.jpg" class="contornoImagen">
+            <img src="./img/atacama.jpeg" class="contornoImagen">
             <div class="contenedorImagenPalabras">
                 <div>
                     <div class="titulo">
@@ -26,7 +26,7 @@
                             </tr>
                             <tr class="elemento2">
                                 <th>Nationality</td>
-                                <td>Costarrican</td>
+                                <td>Costa Rican</td>
                             </tr>
                             <tr class="elemento">
                                 <th>Civil status</td>
