--- a/Tarea4_Proyecto_1_CV/5Additional_Data.html
+++ b/Tarea4_Proyecto_1_CV/5Additional_Data.html
@@ -15,7 +15,7 @@
 <body>
     <div id="menu-placeholder"></div>
     <div class="contenedorImagen">
-        <img src="./img/pythonimg.jpg" class="contornoImagen">
+        <img src="./img/aditionaldata.jpg" class="contornoImagen">
         <div class="contenedorImagenPalabras">
             <div>
                 <div class="titulo">
