--- a/Examen I/inicio.html
+++ b/Examen I/inicio.html
@@ -11,6 +11,54 @@
 
 <body>
     <div id="menu-placeholder"></div>
+    <div class="container">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleDark" class="carousel carousel-dark slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="1000">
+                        <img src="/Examen I/img/img1.jpeg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h1>DORMITORIO PRINCIPAL</h1>
+                            <p>La habitación principal cuenta con una cama tamaño queen muy cómoda, con mesitas de noche, lámparas para lectura
+                            nocturna, un armario amplio, ventilador de techo, balcón con vista al atardecer, televisión con cable y acceso a
+                            netflix.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="1000">
+                        <img src="/Examen I/img/img2.jpeg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h1>SALA</h1>
+                            <p>La sala está conectada al patio interno y tiene salida directa al jardín externo, tiene mucha ventilación e iluminación
+                            natural.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/Examen I/img/img3.jpeg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h1>ÁREA DE TELETRABAJO</h1>
+                            <p>Área de estudio y trabajo. Este espacio cuenta con mucha iluminación, ventilación y una vista muy relajante hacia el
+                            área verde, ideal para detenernos a descansar y leer un libro o para realizar teletrabajo.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
