--- a/Semana11_VLA/Formulario5.html
+++ b/Semana11_VLA/Formulario5.html
@@ -11,8 +11,8 @@
 <body>
     <div id="menu-placeholder"></div>
     <div class="container">
-        <h3>Digite los datos personales</h3>
-        <div class="row">
+        <h3 >Digite los datos personales</h3>
+        <div class="row" style="background-color: aqua;">
           <div class="col">
             <input id="nombrePersona" class="form-control" placeholder="Nombre">
             <div style="margin-top: 10px;">              
