id segundo apellido fixed

--- a/Examen I/contacto.html
+++ b/Examen I/contacto.html
@@ -24,7 +24,7 @@
                 <input id="primerApellidoPersona" class="form-control" placeholder="Primer Apellido">
             </div>
             <div style="margin: 10px;">
-                <input id="primerApellidoPersona" class="form-control" placeholder="Segundo Apellido">
+                <input id="segundoApellidoPersona" class="form-control" placeholder="Segundo Apellido">
             </div>
             <div style="margin: 10px;">
                 <input id="correoPersona" class="form-control" placeholder="Correo">
