--- a/Examen I/contacto.html
+++ b/Examen I/contacto.html
@@ -76,6 +76,24 @@
         </div>
     </div>
 
+    <div class="modal fade" id="modalMensajeLetras" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalLabel">Mensaje</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Superaste la cantidad de letras permitidas en el comentario!
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="/Examen I/js/examen.js"></script>
@@ -88,10 +106,12 @@
                     if (numeroLetras <= 500) {
                     document.getElementById('comentarioAdicional').addEventListener('input', contarLetras);
                     document.getElementById('p').innerText = `Letras: ${numeroLetras} /500`;
-                }
-                else {
-                    document.getElementById('p').innerText = `Has superado el número másximo de letas:${numeroLetras} /500 `;
-                }
+                    }
+                    else {
+                        document.getElementById('p').innerText = `Has superado el número másximo de letas:${numeroLetras} /500 `;
+                        $('#modalMensajeLetras').modal('show');
+
+                    }
                 }
                 window.onload = function () {
                     let letras = document.getElementById("comentarioAdicional").value;
