--- a/Clases/Semana11_VLA/Testimonios.html
+++ b/Clases/Semana11_VLA/Testimonios.html
@@ -10,7 +10,7 @@
 <body>
     <div id="menu-placeholder"></div>
     <div class="container">
-        <!--Testimonio 1-->
+        <!--Testimonio 1...-->
         <div class="contenedorTestimonio " >
             <img class="imagenTestimonio"  src="img/Imagen2.png">
             <div class="contenedorTextoTestimonio">
